--- a/package.json
+++ b/package.json
@@ -3,9 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.7.0",
+    "axios": "^0.19.0",
     "react": "^16.10.2",
+    "react-checkbox-group": "^5.0.2",
+    "react-checkbox-list": "0.0.2",
     "react-dom": "^16.10.2",
-    "react-scripts": "3.2.0"
+    "react-quizzical": "^1.1.0",
+    "react-scripts": "3.2.0",
+    "survey-react": "^1.1.22"
   },
   "scripts": {
     "start": "react-scripts start",
